--- a/frontend/src/app/card-invoice/card-invoice.html
+++ b/frontend/src/app/card-invoice/card-invoice.html
@@ -9,8 +9,8 @@
             (change)="onCardSelected($event)">
       <option value="">-- Select --</option>
 
-      @for (card of cards; track card.cardId) {
-        <option [value]="card.cardId">
+      @for (card of cards; track card.creditCardId) {
+        <option [value]="card.creditCardId">
           {{ card.name }}
         </option>
       }
